--- a/chat-viewer.html
+++ b/chat-viewer.html
@@ -32,7 +32,16 @@
     </div>
     
     <div class="adArea">
-        <a target="_blank" href="https://www.amazon.co.jp/b?_encoding=UTF8&tag=about001-22&linkCode=ur2&linkId=d7e89984354b4e1c51137ac75fc1b1c3&camp=247&creative=1211&node=637394" style="color: gainsboro;">[Amazon広告] クリックで消えます</a>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-0174104129235917"
+     data-ad-slot="5381420390"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
 
     <div class="drawArea"></div>
