jsファイルのキャッシュを読まないように

--- a/generator.html
+++ b/generator.html
@@ -11,9 +11,9 @@
     <div class="giftArea"></div>
     <div class="notificationArea"></div>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="setting.js"></script>
-    <script src="js/openrec-chat-ws.js"></script>
-    <script src="js/generator.js"></script>
+    <script src="setting.js?200327"></script>
+    <script src="js/openrec-chat-ws.js?200327"></script>
+    <script src="js/generator.js?200327"></script>
     <audio id='soundFollow' preload="auto" src="assets/follow.mp3" type="audio/mp3"></audio>
     <audio id='soundGift' preload="auto" src="assets/gift.mp3" type="audio/mp3"></audio>
 </body>
