--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </div>
     
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index.js?200327"></script>
 </body>
 </html>
