--- a/viewer.html
+++ b/viewer.html
@@ -37,8 +37,8 @@
 
     <div class="drawArea"></div>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="setting.js"></script>
-    <script src="js/openrec-chat-ws.js"></script>
-    <script src="js/viewer.js"></script>
+    <script src="setting.js?200327"></script>
+    <script src="js/openrec-chat-ws.js?200327"></script>
+    <script src="js/viewer.js?200327"></script>
 </body>
 </html>
