--- a/generator.html
+++ b/generator.html
@@ -14,6 +14,6 @@
     <script src="setting.js?200327"></script>
     <script src="js/openrec-chat-ws.js?200327"></script>
     <script src="js/generator.js?200327"></script>
-    <audio id='soundGift' preload="auto" src="assets/gift.mp3" type="audio/mp3"></audio>
+    <audio id='soundGift' preload="auto" src="assets/gift.mp3?200327" type="audio/mp3"></audio>
 </body>
 </html>
