--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <span class="param-text2">エールが落ちる速度: <input type="text" placeholder="" value="5000" class="inputBox" id="inp-giftSpeed">※少ないほど早い</span><br>
 
-        <label><input id="chk-giftNoticeSound" class="chkbx" type="checkbox"><span class="chkbx-parts">エールが来た時に音を鳴らす</span></label><br>
+        <label><input id="chk-giftNoticeSound" class="chkbx" type="checkbox"><span class="chkbx-parts">エールが来た時に音を鳴らす</span></label>※PREVIEWだとならないかも<br>
 
         <label><input id="chk-demoMode" class="chkbx" type="checkbox"><span class="chkbx-parts">デモモード</span></label>
     </div>
