権利について明記

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <h1 id="title-area">OPENREC Chat Client - URL Generator</h1>
     <hr>
     <div id="commentary-area">
+        <h3>これは何か</h3>
         OPENRECの放送画面に、コメントやエールの画面を流すことができるツールです。<br>
         このツールは個人で開発しているものなので、ある日突然使えなくなる可能性があります。<br>
         詳しい使い方については<a href="#">こちらのページ</a>をご覧ください。<br>
         「こういう機能を付けてほしい」という方は気軽に相談して下さい。<br>
+        <br>
+        <h3>株式会社ドワンゴの特許について</h3>
+        株式会社ドワンゴの特許（特許第4695583、特許第4734471）は、<br>
+        「コメントを、コメント付与時間と動画再生時間を用いてシンクロさせ、動画上に表示させる」装置の特許です。<br>
+        一方で、このツールは「生配信のコメントをリアルタイムに表示する」だけのツールです。<br>
+        コメント付与時間も動画再生時間もプログラム上で利用していません。<br>
+        株式会社ドワンゴの特許侵害にはなっていませんので、ご安心してご利用ください。<br>
     </div>
     <br>
     <div id="param-area">
@@ -37,7 +45,10 @@
 
         <label><input id="chk-giftNoticeSound" class="chkbx" type="checkbox"><span class="chkbx-parts">エールが来た時に音を鳴らす</span></label>※PREVIEWだとならないかも<br>
 
-        <label><input id="chk-demoMode" class="chkbx" type="checkbox"><span class="chkbx-parts">デモモード</span></label>
+        <label><input id="chk-demoMode" class="chkbx" type="checkbox"><span class="chkbx-parts">デモモード</span></label><br>
+        <br>
+        <br>
+        <br>
     </div>
 
     <span class="output-text">OUTPUT URL</span>
