--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>これは何か</h3>
         OPENRECの放送画面に、コメントやエールの画面を流すことができるツールです。<br>
         このツールは個人で開発しているものなので、ある日突然使えなくなる可能性があります。<br>
-        詳しい使い方については<a href="#">こちらのページ</a>をご覧ください。<br>
+        詳しい使い方については<a href="https://tokaisodachi.com/archives/2295">こちらのページ</a>をご覧ください。<br>
         「こういう機能を付けてほしい」という方は気軽に相談して下さい。<br>
         <h3>株式会社ドワンゴの特許について</h3>
         株式会社ドワンゴの特許（特許第4695583、特許第4734471）は、<br>
