--- a/viewer.html
+++ b/viewer.html
@@ -30,15 +30,15 @@
             </span>
         </span>
     </div>
-    <div id="versionArea">v1.0.0</div>
+    <div id="versionArea"></div>
     <div class="adArea">
         <a target="_blank" href="https://www.openrec.tv/user/tokaisodachi" style="color: gainsboro;">[とかい育ちチャンネル]</a>
     </div>
 
     <div class="drawArea"></div>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="setting.js?200327"></script>
-    <script src="js/openrec-chat-ws.js?200327"></script>
-    <script src="js/viewer.js?200327"></script>
+    <script src="setting.js?200328"></script>
+    <script src="js/openrec-chat-ws.js?200328"></script>
+    <script src="js/viewer.js?200328"></script>
 </body>
 </html>
