--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </div>
     
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/index.js?200327"></script>
+    <script src="./setting.js?200330"></script>
+    <script src="js/index.js?200330"></script>
 </body>
 </html>
