--- a/generator.html
+++ b/generator.html
@@ -10,10 +10,11 @@
     <div class="chatArea"></div>
     <div class="giftArea"></div>
     <div class="notificationArea"></div>
+    <div class="versionArea">Loading...</div>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="setting.js?2003282"></script>
-    <script src="js/openrec-chat-ws.js?2003282"></script>
-    <script src="js/generator.js?200328"></script>
+    <script src="setting.js?200330"></script>
+    <script src="js/openrec-chat-ws.js?200330"></script>
+    <script src="js/generator.js?200330"></script>
     <audio id='soundGift' preload="auto" src="assets/gift.mp3?200327" type="audio/mp3"></audio>
 </body>
 </html>
