--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <div id="param-area">
         <span id="option-text">設定</span><br>
-        <span class="param-text">https://www.openrec.tv/user/<input type="text" placeholder="チャンネルID" value="" class="inputBox" id="inp-channelId">※必須</span><br>
+        <span class="param-text2">チャンネルID: <input type="text" placeholder="必須" value="" class="inputBox" id="inp-channelId">※https://www.openrec.tv/user/***** ←ここの部分</span><br>
         
         <label><input id="chk-chatInUserName" class="chkbx" type="checkbox"><span class="chkbx-parts">流れるコメントに@名前を含める</span></label><br>
 
@@ -66,7 +66,7 @@
     </div>
     
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="./setting.js?200330"></script>
-    <script src="js/index.js?200330"></script>
+    <script src="./setting.js?200403"></script>
+    <script src="js/index.js?200403"></script>
 </body>
 </html>
