--- a/generator.html
+++ b/generator.html
@@ -12,9 +12,9 @@
     <div class="notificationArea"></div>
     <div class="versionArea">Loading...</div>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="setting.js?200403"></script>
+    <script src="setting.js?2004032"></script>
     <script src="js/openrec-chat-ws.js?200403"></script>
-    <script src="js/generator.js?200403"></script>
+    <script src="js/generator.js?2004032"></script>
     <audio id='soundGift' preload="auto" src="assets/gift.mp3?200327" type="audio/mp3"></audio>
 </body>
 </html>
