パラメーターにverを含めるように

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="./setting.js?200403"></script>
-    <script src="js/index.js?200403"></script>
+    <script src="js/index.js?2004032"></script>
 </body>
 </html>
