キャッシュを読まないように

--- a/viewer.html
+++ b/viewer.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="css/viewer.css" rel="stylesheet" />
+    <link href="css/viewer.css?200422" rel="stylesheet" />
     <title>openrec chat viewer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 </head>
